changes in item detail vc

--- a/Main.storyboard
+++ b/Main.storyboard
@@ -1978,8 +1978,8 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="28" id="3p5-ze-3IS"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <state key="normal" title="Submit">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="Send">
                                     <color key="titleColor" red="0.30534905169999998" green="0.61973076250000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <variation key="default">
@@ -3085,6 +3085,31 @@
                                     </mask>
                                 </variation>
                             </imageView>
+                            <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SlN-vD-RTK">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <color key="backgroundColor" red="0.30534905169999998" green="0.61973076250000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="32" id="anA-Y0-ZoN"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="Search Products">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="anA-Y0-ZoN"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="anA-Y0-ZoN"/>
+                                    </mask>
+                                </variation>
+                                <connections>
+                                    <segue destination="wfJ-lb-oNX" kind="push" id="DgL-SO-jAR"/>
+                                </connections>
+                            </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="upperAngularIcon2" translatesAutoresizingMaskIntoConstraints="NO" id="Auk-TC-lDv">
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                 <color key="tintColor" red="0.24103177670000001" green="0.61902171049999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -3105,46 +3130,21 @@
                                     </mask>
                                 </variation>
                             </imageView>
-                            <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SlN-vD-RTK">
-                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="SlN-vD-RTK" secondAttribute="height" multiplier="6:1" id="KOR-tS-cQV"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <state key="normal" title="Search Products">
-                                    <color key="titleColor" red="0.023004190109999999" green="0.52954605389999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="KOR-tS-cQV"/>
-                                    </mask>
-                                </variation>
-                                <variation key="heightClass=regular-widthClass=compact">
-                                    <mask key="constraints">
-                                        <include reference="KOR-tS-cQV"/>
-                                    </mask>
-                                </variation>
-                                <connections>
-                                    <segue destination="wfJ-lb-oNX" kind="push" id="DgL-SO-jAR"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="SlN-vD-RTK" firstAttribute="width" secondItem="f8m-rw-laR" secondAttribute="width" multiplier="0.498" id="6qI-r5-CHw"/>
                             <constraint firstItem="oil-y0-xMB" firstAttribute="top" secondItem="U8S-Tc-jKA" secondAttribute="bottom" constant="36" id="9NX-Dp-dEF"/>
                             <constraint firstItem="U8S-Tc-jKA" firstAttribute="top" secondItem="YbX-aQ-LPg" secondAttribute="bottom" id="C5K-44-0ZQ"/>
                             <constraint firstItem="oil-y0-xMB" firstAttribute="width" secondItem="f8m-rw-laR" secondAttribute="width" multiplier="0.36" id="JA7-OG-ra9"/>
-                            <constraint firstItem="SlN-vD-RTK" firstAttribute="top" secondItem="Auk-TC-lDv" secondAttribute="bottom" constant="8" id="QEz-NR-04g"/>
+                            <constraint firstItem="SlN-vD-RTK" firstAttribute="top" secondItem="Auk-TC-lDv" secondAttribute="bottom" constant="3" id="QEz-NR-04g"/>
                             <constraint firstItem="oil-y0-xMB" firstAttribute="centerX" secondItem="f8m-rw-laR" secondAttribute="centerX" id="Qpc-Va-FuD"/>
                             <constraint firstAttribute="trailingMargin" secondItem="U8S-Tc-jKA" secondAttribute="trailing" id="Rth-5q-PId">
                                 <variation key="heightClass=regular-widthClass=compact" constant="-20"/>
                             </constraint>
-                            <constraint firstItem="ShP-y9-y89" firstAttribute="top" secondItem="SlN-vD-RTK" secondAttribute="bottom" constant="52" id="UZe-uN-GGD"/>
+                            <constraint firstItem="ShP-y9-y89" firstAttribute="top" secondItem="SlN-vD-RTK" secondAttribute="bottom" constant="57" id="VA8-6S-y3Z"/>
                             <constraint firstItem="SlN-vD-RTK" firstAttribute="centerX" secondItem="oil-y0-xMB" secondAttribute="centerX" id="emg-b3-bTv"/>
                             <constraint firstItem="Auk-TC-lDv" firstAttribute="centerX" secondItem="SlN-vD-RTK" secondAttribute="centerX" id="g7Y-t4-6zI"/>
-                            <constraint firstItem="SlN-vD-RTK" firstAttribute="width" secondItem="f8m-rw-laR" secondAttribute="width" multiplier="0.555" id="rUO-nh-m0S"/>
                             <constraint firstItem="U8S-Tc-jKA" firstAttribute="leading" secondItem="f8m-rw-laR" secondAttribute="leadingMargin" id="w5k-J7-0oH">
                                 <variation key="heightClass=regular-widthClass=compact" constant="-20"/>
                             </constraint>
@@ -3153,42 +3153,42 @@
                             <mask key="subviews">
                                 <exclude reference="U8S-Tc-jKA"/>
                                 <exclude reference="oil-y0-xMB"/>
-                                <exclude reference="Auk-TC-lDv"/>
                                 <exclude reference="SlN-vD-RTK"/>
+                                <exclude reference="Auk-TC-lDv"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="UZe-uN-GGD"/>
-                                <exclude reference="QEz-NR-04g"/>
-                                <exclude reference="emg-b3-bTv"/>
-                                <exclude reference="rUO-nh-m0S"/>
                                 <exclude reference="C5K-44-0ZQ"/>
                                 <exclude reference="Rth-5q-PId"/>
                                 <exclude reference="w5k-J7-0oH"/>
-                                <exclude reference="g7Y-t4-6zI"/>
                                 <exclude reference="9NX-Dp-dEF"/>
                                 <exclude reference="JA7-OG-ra9"/>
                                 <exclude reference="Qpc-Va-FuD"/>
+                                <exclude reference="g7Y-t4-6zI"/>
+                                <exclude reference="6qI-r5-CHw"/>
+                                <exclude reference="QEz-NR-04g"/>
+                                <exclude reference="emg-b3-bTv"/>
+                                <exclude reference="VA8-6S-y3Z"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
                             <mask key="subviews">
                                 <include reference="U8S-Tc-jKA"/>
                                 <include reference="oil-y0-xMB"/>
-                                <include reference="Auk-TC-lDv"/>
                                 <include reference="SlN-vD-RTK"/>
+                                <include reference="Auk-TC-lDv"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="UZe-uN-GGD"/>
-                                <include reference="QEz-NR-04g"/>
-                                <include reference="emg-b3-bTv"/>
-                                <include reference="rUO-nh-m0S"/>
                                 <include reference="C5K-44-0ZQ"/>
                                 <include reference="Rth-5q-PId"/>
                                 <include reference="w5k-J7-0oH"/>
-                                <include reference="g7Y-t4-6zI"/>
                                 <include reference="9NX-Dp-dEF"/>
                                 <include reference="JA7-OG-ra9"/>
                                 <include reference="Qpc-Va-FuD"/>
+                                <include reference="g7Y-t4-6zI"/>
+                                <include reference="6qI-r5-CHw"/>
+                                <include reference="QEz-NR-04g"/>
+                                <include reference="emg-b3-bTv"/>
+                                <include reference="VA8-6S-y3Z"/>
                             </mask>
                         </variation>
                     </view>
