--- a/Main.storyboard
+++ b/Main.storyboard
@@ -1539,14 +1539,12 @@
                         <viewControllerLayoutGuide type="bottom" id="Ovl-Nj-lTI"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="vVJ-Yj-Low">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kbe-0w-3Az">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                 <state key="normal" title="Share App"/>
-                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="124" y="385" width="152" height="30"/>
-                                </variation>
                                 <connections>
                                     <action selector="AppShareAction:" destination="ZPG-2t-c98" eventType="touchUpInside" id="QRO-Rt-Kky"/>
                                 </connections>
@@ -1669,7 +1667,7 @@
                                                         </mask>
                                                     </variation>
                                                     <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                                        <rect key="frame" x="131" y="16" width="57" height="9"/>
+                                                        <rect key="frame" x="134" y="16" width="54" height="9"/>
                                                         <mask key="constraints">
                                                             <include reference="Dc5-QP-uam"/>
                                                         </mask>
@@ -1689,7 +1687,7 @@
                                                         </mask>
                                                     </variation>
                                                     <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                                        <rect key="frame" x="131" y="33" width="44" height="17"/>
+                                                        <rect key="frame" x="134" y="33" width="44" height="17"/>
                                                         <mask key="constraints">
                                                             <include reference="bcA-LY-aZ6"/>
                                                         </mask>
@@ -1709,7 +1707,7 @@
                                                         </mask>
                                                     </variation>
                                                     <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                                        <rect key="frame" x="190" y="33" width="98" height="17"/>
+                                                        <rect key="frame" x="193" y="33" width="98" height="17"/>
                                                         <mask key="constraints">
                                                             <include reference="ESL-zO-k8h"/>
                                                         </mask>
@@ -1729,7 +1727,7 @@
                                                         </mask>
                                                     </variation>
                                                     <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                                        <rect key="frame" x="131" y="53" width="123" height="44"/>
+                                                        <rect key="frame" x="134" y="53" width="132" height="47"/>
                                                         <mask key="constraints">
                                                             <include reference="5so-g6-ctd"/>
                                                         </mask>
@@ -1749,7 +1747,7 @@
                                                         </mask>
                                                     </variation>
                                                     <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                                        <rect key="frame" x="265" y="53" width="179" height="44"/>
+                                                        <rect key="frame" x="277" y="53" width="194" height="47"/>
                                                         <mask key="constraints">
                                                             <include reference="L0m-8P-aPZ"/>
                                                         </mask>
@@ -2893,7 +2891,7 @@
                                             <outlet property="qtyTxtField" destination="Xg5-KS-CQ1" id="dNB-ND-O2c"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DetailViewCellIdentifier" rowHeight="237" id="xvp-1s-Oj3" customClass="ItemDetailViewCell" customModule="BrillCreation" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DetailViewCellIdentifier" rowHeight="265" id="xvp-1s-Oj3" customClass="ItemDetailViewCell" customModule="BrillCreation" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="xvp-1s-Oj3" id="gTM-G1-kon">
@@ -2931,7 +2929,9 @@
                                                 <constraint firstItem="v5p-8a-sRF" firstAttribute="top" secondItem="jz4-cP-FTD" secondAttribute="bottom" constant="2" id="BVs-5T-QNF"/>
                                                 <constraint firstItem="jz4-cP-FTD" firstAttribute="top" secondItem="gTM-G1-kon" secondAttribute="topMargin" constant="6" id="JQ8-yG-Efe"/>
                                                 <constraint firstItem="jz4-cP-FTD" firstAttribute="width" secondItem="gTM-G1-kon" secondAttribute="width" multiplier="0.615" id="hrH-lg-v8q"/>
-                                                <constraint firstItem="v5p-8a-sRF" firstAttribute="height" secondItem="gTM-G1-kon" secondAttribute="height" multiplier="0.565" id="igQ-a2-tCU"/>
+                                                <constraint firstItem="v5p-8a-sRF" firstAttribute="height" secondItem="gTM-G1-kon" secondAttribute="height" multiplier="0.565" id="igQ-a2-tCU">
+                                                    <variation key="heightClass=regular-widthClass=compact" constant="-15.724999999999994"/>
+                                                </constraint>
                                                 <constraint firstItem="v5p-8a-sRF" firstAttribute="centerX" secondItem="gTM-G1-kon" secondAttribute="centerX" id="xrj-He-gXH"/>
                                                 <constraint firstItem="jz4-cP-FTD" firstAttribute="leading" secondItem="v5p-8a-sRF" secondAttribute="leading" id="yL9-9r-aeg"/>
                                                 <constraint firstItem="v5p-8a-sRF" firstAttribute="width" secondItem="gTM-G1-kon" secondAttribute="width" multiplier="0.825" id="zEI-Qp-h69"/>
@@ -2989,7 +2989,7 @@
                                 </connections>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" red="0.52156862749999999" green="0.62745098040000002" blue="0.65490196079999996" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="pcA-em-CyO" firstAttribute="top" secondItem="Fak-mZ-VaD" secondAttribute="bottom" id="6Bq-8X-BbY"/>
                             <constraint firstItem="jXs-jw-nOj" firstAttribute="baseline" secondItem="pcA-em-CyO" secondAttribute="baseline" id="Byy-FN-J2s"/>
